Support building binaries